objects/fbm__Enrichment__c.object
<CustomObject>
    <fields>
        <fullName>fbm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FunnelBeam Enrichments</relationshipLabel>
        <relationshipName>Enrichment_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fbm__Company_City__c</fullName>
        <label>Company City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Country_Code__c</fullName>
        <label>Company Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Country__c</fullName>
        <label>Company Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Description__c</fullName>
        <label>Company Description</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Employee_Range__c</fullName>
        <label>Company Employee Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Employee_Size__c</fullName>
        <label>Company Employee Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Employees_Count__c</fullName>
        <label>Company Employees Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Founded__c</fullName>
        <label>Company Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Industry__c</fullName>
        <label>Company Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Linkedin__c</fullName>
        <label>Company Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Phone__c</fullName>
        <label>Company Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Postal_Code__c</fullName>
        <label>Company Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_State_Code__c</fullName>
        <label>Company State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_State__c</fullName>
        <label>Company State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Street_Address__c</fullName>
        <label>Company Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Type__c</fullName>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Company_WebSite__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fbm__Company_Zip__c</fullName>
        <label>Company Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FunnelBeam Enrichments</relationshipLabel>
        <relationshipName>Enrichment_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fbm__Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fbm__InvokeId__c</fullName>
        <label>InvokeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>FunnelBeam Enrichments</relationshipLabel>
        <relationshipName>Enrichment_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fbm__Parent__c</fullName>
        <externalId>true</externalId>
        <label>Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_City__c</fullName>
        <label>Person City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Company_Name__c</fullName>
        <label>Person Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Company_Tenure__c</fullName>
        <label>Person Company Tenure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Country__c</fullName>
        <label>Person Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Email__c</fullName>
        <label>Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fbm__Person_First_Name__c</fullName>
        <label>Person First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Last_Name__c</fullName>
        <label>Person Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Linkedin__c</fullName>
        <label>Person Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Mobile_Phone__c</fullName>
        <label>Person Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_State_Code__c</fullName>
        <label>Person State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_State__c</fullName>
        <label>Person State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Person_Title__c</fullName>
        <label>Person Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Professional_Email__c</fullName>
        <label>Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fbm__RequestId__c</fullName>
        <label>RequestId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__ResponseId__c</fullName>
        <label>ResponseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__SObjectType__c</fullName>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FunnelBeam Enrichment</label>
    <listViews>
        <fullName>fbm__All</fullName>
        <columns>NAME</columns>
        <columns>fbm__Lead__c</columns>
        <columns>fbm__Account__c</columns>
        <columns>fbm__Contact__c</columns>
        <columns>fbm__Status__c</columns>
        <columns>fbm__Company_WebSite__c</columns>
        <columns>fbm__Company_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>fbm__Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Enrichment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FunnelBeam Enrichments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>